PR11364 sdt.h volatile for args isn't needed with gcc 4.5 or rh 4.4.3-10+